--- a/localization/kor/AigisMod-Keyword-Strings.json
+++ b/localization/kor/AigisMod-Keyword-Strings.json
@@ -25,6 +25,8 @@
       "데미지아우라를",
       "데미지 아우라",
       "데미지 아우라를",
+      "데미지_아우라",
+      "데미지_아우라를",
       "데미지_아우라와",
       "Damage Aura",
       "Damage_aura",
@@ -43,10 +45,12 @@
     "DESCRIPTION": "이 카드의 공격은 #y방어도와 #y가시, #y분노, #y날카로운 #y껍질, 그리고 #y몸 #y말기를 #b무시합니다."
   },
   {
-    "PROPER_NAME": "블룸페탈",
+    "PROPER_NAME": "블룸 페탈",
     "NAMES": [
       "블룸페탈",
       "블룸페탈을",
+      "블룸_페탈",
+      "블룸_페탈을",
       "Bloom Petal",
       "Bloom_petal",
       "bloom_petal"
