--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -390,7 +390,7 @@
   },
   "aigisMod:Mirage": {
     "NAME": "피화예견의 거울",
-    "DESCRIPTION": "사용할시 이번 턴 보존 됩니다. NL 만약 이 카드가 손패에 있는 상태에서 죽게 된다면, 이 카드를 대신 소멸시키고 최대 체력의 !M! %만큼 회복합니다."
+    "DESCRIPTION": "사용할시 이번 턴 보존 됩니다. NL 만약 이 카드가 손패에 있는 상태에서 죽게 된다면, 이 카드를 대신 소멸시키고 최대 체력의 !M! % 만큼 회복합니다."
   },
   "aigisMod:Wonderheart": {
     "NAME": "원더하트",
@@ -445,10 +445,10 @@
   },
   "aigisMod:Belinda": {
     "NAME": "벨린다",
-    "DESCRIPTION": "!D! 데미지를 가합니다. NL Apply aigismod:둔족. NL aigismod:페어 : Cloris.",
-    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL Apply aigismod:둔족. NL aigismod:페어 : Cloris and it cost 0 this turn.",
+    "DESCRIPTION": "!D! 데미지를 가합니다. NL aigismod:둔족을 부여합니다. NL aigismod:페어 : 클로리스.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL aigismod:둔족을 부여합니다. NL aigismod:페어 : 클로리스 (이번 턴에만 0 코스트)",
     "EXTENDED_DESCRIPTION" : [
-      "White Witch"
+      "백의 마녀"
     ]
   },
   "aigisMod:Cloris": {
@@ -456,79 +456,79 @@
     "DESCRIPTION": "!D! 데미지를 가합니다. NL Apply aigismod:둔족. NL aigismod:페어 : Belinda.",
     "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. NL Apply aigismod:둔족. NL aigismod:페어 : Belinda and it cost 0 this turn.",
     "EXTENDED_DESCRIPTION" : [
-      "White Witch"
+      "백의 마녀"
     ]
   },
   "aigisMod:Anna": {
     "NAME": "안나",
-    "DESCRIPTION": "Gain 1 max HP. NL Strikes and Defends gain !M! more damage/block this combat. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "Gain 1 max HP. NL Strikes and Defends gain !M! more damage/block this combat. NL 소멸.",
+    "DESCRIPTION": "최대 체력이 1 증가합니다. NL 타격과 수비가 !M! 씩 더 증가합니다. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "최대 체력이 1 증가합니다. NL 타격과 수비가 !M! 씩 더 증가합니다. NL 소멸.",
     "EXTENDED_DESCRIPTION" : [
-      "Parliamentary Secretary"
+      "정무관"
     ]
   },
   "aigisMod:Carrie": {
     "NAME": "캐리",
-    "DESCRIPTION": "!D! 데미지를 가합니다. 치명타일 경우 gain [E] NL After first use increase this card damage by 2.",
-    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. 치명타일 경우 gain [E] [E] NL After first use increase this card damage by 2.",
+    "DESCRIPTION": "!D! 데미지를 가합니다. 치명타일 경우 [E] 를 얻습니다. NL 첫 사용 이후 이 카드의 데미지를 2 증가시킵니다.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다. 치명타일 경우 [E] [E] 를 얻습니다. NL 첫 사용 이후 이 카드의 데미지를 2 증가시킵니다.",
     "EXTENDED_DESCRIPTION" : [
-      "Lancer"
+      "창기병"
     ]
   },
   "aigisMod:Thetis": {
     "NAME": "테티스",
-    "DESCRIPTION": "!D! 데미지를 가합니다 and 방어도를 !B! 얻습니다. 치명타일 경우 gain [E]. NL aigismod:페어 : Bashira.",
-    "UPGRADE_DESCRIPTION": "!D! 데미지를 가합니다 and 방어도를 !B! 얻습니다. 치명타일 경우 gain [E] [E]. NL aigismod:페어 : Bashira and it cost 0 this turn.",
+    "DESCRIPTION": "!D! 데미지를 가하고 방어도를 !B! 얻습니다. 치명타일 경우 [E] 를 얻습니다. NL aigismod:페어 : 바시라.",
+    "UPGRADE_DESCRIPTION": "!D! 데미지를 가하고 방어도를 !B! 얻습니다. 치명타일 경우 [E] [E] 를 얻습니다. NL aigismod:페어 : 바시라 (이번 턴에만 0 코스트)",
     "EXTENDED_DESCRIPTION" : [
-      "White Lily Knight"
+      "흰 백합기사"
     ]
   },
   "aigisMod:Bashira": {
     "NAME": "바시라",
-    "DESCRIPTION": "Deal !D! aigismod:아쳐 데미지 !M! times. NL aigismod:페어 : Thetis.",
-    "UPGRADE_DESCRIPTION": "Deal !D! aigismod:아쳐 데미지 !M! times. NL aigismod:페어 : Thetis and it cost 0 this turn.",
+    "DESCRIPTION": "!D! aigismod:아쳐 데미지를 !M! 회 가합니다. NL aigismod:페어 : 테티스.",
+    "UPGRADE_DESCRIPTION": "!D! aigismod:아쳐 데미지를 !M! 회 가합니다. NL aigismod:페어 : 테티스 (이번 턴에만 0 코스트)",
     "EXTENDED_DESCRIPTION" : [
-      "GodSpeed Archer"
+      "신속의 사수"
     ]
   },
   "aigisMod:Phyllis": {
     "NAME": "필리스",
-    "DESCRIPTION": "방어도를 !B! 얻습니다. Next turn gain [E]",
-    "UPGRADE_DESCRIPTION": "방어도를 !B! 얻습니다. Next turn gain [E]",
+    "DESCRIPTION": "방어도를 !B! 얻습니다. 다음 턴에 [E] 를 얻습니다.",
+    "UPGRADE_DESCRIPTION": "방어도를 !B! 얻습니다. 다음 턴에 [E] 를 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
-      "Greenhorn Soldier"
+      "신록의 병사"
     ]
   },
   "aigisMod:Aria": {
     "NAME": "아리아",
-    "DESCRIPTION": "방어도를 !B! 얻습니다. NL Draw 1 card. NL Next turn gain [E]",
-    "UPGRADE_DESCRIPTION": "방어도를 !B! 얻습니다. NL Draw 1 card and gain 1 힘 for the turn. NL Next turn gain [E]",
+    "DESCRIPTION": "방어도를 !B! 얻습니다. NL 카드를 1 장 뽑습니다. NL 다음 턴에 [E] 를 얻습니다.",
+    "UPGRADE_DESCRIPTION": "방어도를 !B! 얻습니다. NL 카드를 1 장 뽑고 해당 턴에만 힘을 1 얻습니다. NL 다음 턴에 [E] 를 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
-      "Lieutenant"
+      "부관"
     ]
   },
   "aigisMod:Katie": {
     "NAME": "케이티",
-    "DESCRIPTION": "방어도를 !B! 얻습니다. NL 다음 턴에 gain !M! fixed 방어도 and [E]",
-    "UPGRADE_DESCRIPTION": "방어도를 !B! 얻습니다. NL 다음 턴에 gain !M! fixed 방어도 and [E]",
+    "DESCRIPTION": "방어도를 !B! 얻습니다. NL 다음 턴에 !M! 고정 방어도와 [E] 를 얻습니다.",
+    "UPGRADE_DESCRIPTION": "방어도를 !B! 얻습니다. NL 다음 턴에 !M! 고정 방어도와 [E] 를 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
-      "Tactics Instructor"
+      "전술교관"
     ]
   },
   "aigisMod:Alissa": {
     "NAME": "아리사",
-    "DESCRIPTION": "체력을 !M! 회복한다 HP. NL aigismod:페어 : Soma. NL 소멸.",
-    "UPGRADE_DESCRIPTION": "체력을 !M! 회복한다 HP. NL aigismod:페어 : Soma and its cost become 0 this turn. NL 소멸.",
+    "DESCRIPTION": "체력을 !M! 회복한다. NL aigismod:페어 : 소마. NL 소멸.",
+    "UPGRADE_DESCRIPTION": "체력을 !M! 회복한다. NL aigismod:페어 : 소마 (이번 턴에만 0 코스트). NL 소멸.",
     "EXTENDED_DESCRIPTION" : [
-      "Healer"
+      "치유의 손"
     ]
   },
   "aigisMod:Soma": {
     "NAME": "소마",
-    "DESCRIPTION": "Deal !D! aigismod:아쳐 데미지. aigismod:페어 : Alissa",
+    "DESCRIPTION": "!D! aigismod:아쳐 데미지를 가합니다. aigismod:페어 : Alissa",
     "UPGRADE_DESCRIPTION": "Deal !D! aigismod:아쳐 데미지. aigismod:페어 : Alissa and its cost 1 this turn.",
     "EXTENDED_DESCRIPTION" : [
-      "Archer"
+      "궁병"
     ]
   },
   "aigisMod:Kazuha": {
