--- a/localization/kor/AigisMod-Character-Strings.json
+++ b/localization/kor/AigisMod-Character-Strings.json
@@ -38,7 +38,7 @@
       "암흑기사"
     ],
     "TEXT": [
-      "리빙아머가 된 전사는 별의 속삭임에 인도되어 첨탑에 도달했다. NL 이 여정을 통해 그는 중요한  있을 것이다.",
+      "리빙아머가 된 전사는 별의 속삭임에 인도되어 첨탑에 도달했다. NL 이 여정을 통해 그는 중요한 것을 발견할 수도 있을 것이다.",
       "당신은 심장을 향한 오의를 발하고...",
       "불빛이 사라진 거리를 걷던 중, 당신은 어둠의 의식을 행하는 다수의 두건 쓴 사람들을 목격한다. 당신이 접근하자, 그들은 일제히 당신을 돌아보았다. 무리 중 가장 장신인 이가 송곳니를 드러내며, 길고 창백한 손을 당신에게 뻗는다. NL "기사여, 우리와 함께하여 첨탑의 온기를 느껴봅시다." "
     ]
